# rtsp2jpeg-http-get

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build-check.yml  release.yml
src/rtsp2jpeg_http_get/: server.py
